Fixed layout bug in one_model to make preview images square when there is no preview image in a model
Former-commit-id: f9dce119460ed597bd1732694cc5c23d24a88a8e

--- a/public/stylesheets/sass/nlcommons.scss
+++ b/public/stylesheets/sass/nlcommons.scss
@@ -429,6 +429,9 @@ $comment-border-width: 2px;
     display: inline-block;
     background-color: hsl(0%, 0%, 85%);
   }
+  &>div {
+    width: 152px;
+  }
 }
 #preview_info {
   img {
